<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:background="@drawable/background_green"
	android:orientation="vertical" android:paddingLeft="10dip" android:paddingRight="10dip" android:paddingBottom="15dip" android:paddingTop="15dip" android:layout_height="480dip" android:layout_width="320dip">
	
	<FrameLayout
		android:id="@+id/FrameLayout01"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content">
	<LinearLayout
		android:orientation="vertical"
		android:layout_height="wrap_content"
		android:layout_width="fill_parent"
		android:layout_gravity="center">

		<TextView
			android:id="@+id/comment_text"
			android:text="@string/pregame_msg"
			android:background="@drawable/comment"
			android:textColor="@color/normal_text"
			android:paddingTop="5dip" android:paddingLeft="10dip" android:layout_marginBottom="10dip" android:layout_height="70dip" android:maxLines="3" android:layout_width="260dip" android:layout_gravity="left"/>
		<LinearLayout
			android:orientation="horizontal"
			android:layout_height="wrap_content"
			android:layout_width="fill_parent"
			android:layout_gravity="center">
			<TextView
				android:text="@string/timer_label"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:textColor="@color/normal_text"/>
			<TextView
				android:id="@+id/timer_text"
				android:textColor="@color/normal_text"
				android:background="@color/text_background"
				android:layout_height="wrap_content" android:layout_width="50dip" android:gravity="right"/>
			<TextView
				android:text="@string/point_label"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:layout_marginLeft="5dip" android:textColor="@color/normal_text"/>
			<TextView
				android:id="@+id/point_text"
				android:textColor="@color/normal_text"
				android:background="@color/text_background"
				android:layout_height="wrap_content" android:layout_width="50dip" android:gravity="right"/>
			</LinearLayout>
	<LinearLayout
		android:orientation="horizontal"
		android:layout_gravity="center" android:layout_width="300dip" android:layout_height="40dip">
		<TextView
			android:id="@+id/answer_text"
			android:textColor="@color/normal_text"
			android:background="@drawable/screen_small"
			android:layout_height="40dip" android:layout_width="180dip" android:layout_gravity="center" android:paddingLeft="20dip" android:paddingTop="10dip"/>
		<Button
			android:id="@+id/ok_button"
			android:background="@drawable/comment" android:text="@string/ok_label" android:layout_gravity="center" android:layout_height="40dip" android:layout_marginLeft="20dip" android:layout_width="100dip" android:textColor="@color/normal_text"/>
	</LinearLayout>

		</LinearLayout>
		<!-- android:id="@+id/ok_button"  -->
		<ImageView
		android:background="@drawable/kanako" android:layout_gravity="right" android:layout_marginRight="5dip" android:layout_height="110dip" android:layout_width="85dip" android:id="@+id/character"/>

	</FrameLayout>
	<LinearLayout
		android:id="@+id/board_main"
		android:orientation="vertical"
		android:layout_gravity="center" android:layout_marginTop="10dip" android:layout_width="300dip" android:layout_height="300dip">
<!-- 
			<LinearLayout
				android:id="@+id/LinearLayout01"
				android:background="@color/key_background"
				android:layout_gravity="center"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content">
				<Button
					android:id="@+id/btn_1_1"
					android:background="@drawable/button"
					android:layout_width="60dip"
					android:layout_height="60dip"
					android:text="@string/label_1_1" />
				<Button
					android:id="@+id/btn_1_2"
					android:background="@drawable/button"
					android:layout_width="60dip"
					android:layout_height="60dip"
					android:text="@string/label_1_2" />
				<Button
					android:id="@+id/btn_1_3"
					android:background="@drawable/button"
					android:layout_width="60dip"
					android:layout_height="60dip"
					android:text="@string/label_1_3" />
				<Button
					android:id="@+id/btn_1_4"
					android:background="@drawable/button"
					android:layout_width="60dip"
					android:layout_height="60dip"
					android:text="@string/label_1_4" />
				<Button
					android:id="@+id/btn_1_5"
					android:background="@drawable/button"
					android:layout_width="60dip"
					android:layout_height="60dip"
					android:text="@string/label_1_5" />
			</LinearLayout>
			<LinearLayout
				android:id="@+id/LinearLayout01"
				android:background="@color/key_background"
				android:layout_gravity="center"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content">
				<Button
					android:id="@+id/btn_1_1"
					android:background="@drawable/button"
					android:layout_width="60dip"
					android:layout_height="60dip"
					android:text="@string/label_1_1" />
				<Button
					android:id="@+id/btn_1_2"
					android:background="@drawable/button"
					android:layout_width="60dip"
					android:layout_height="60dip"
					android:text="@string/label_1_2" />
				<Button
					android:id="@+id/btn_1_3"
					android:background="@drawable/button"
					android:layout_width="60dip"
					android:layout_height="60dip"
					android:text="@string/label_1_3" />
				<Button
					android:id="@+id/btn_1_4"
					android:background="@drawable/button"
					android:layout_width="60dip"
					android:layout_height="60dip"
					android:text="@string/label_1_4" />
				<Button
					android:id="@+id/btn_1_5"
					android:background="@drawable/button"
					android:layout_width="60dip"
					android:layout_height="60dip"
					android:text="@string/label_1_5" />
			</LinearLayout>
			<LinearLayout
				android:id="@+id/LinearLayout01"
				android:background="@color/key_background"
				android:layout_gravity="center"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content">
				<Button
					android:id="@+id/btn_1_1"
					android:background="@drawable/button"
					android:layout_width="60dip"
					android:layout_height="60dip"
					android:text="@string/label_1_1" />
				<Button
					android:id="@+id/btn_1_2"
					android:background="@drawable/button"
					android:layout_width="60dip"
					android:layout_height="60dip"
					android:text="@string/label_1_2" />
				<Button
					android:id="@+id/btn_1_3"
					android:background="@drawable/button"
					android:layout_width="60dip"
					android:layout_height="60dip"
					android:text="@string/label_1_3" />
				<Button
					android:id="@+id/btn_1_4"
					android:background="@drawable/button"
					android:layout_width="60dip"
					android:layout_height="60dip"
					android:text="@string/label_1_4" />
				<Button
					android:id="@+id/btn_1_5"
					android:background="@drawable/button"
					android:layout_width="60dip"
					android:layout_height="60dip"
					android:text="@string/label_1_5" />
			</LinearLayout>
 -->
	</LinearLayout>


</LinearLayout>
